Fixed word wrapping of todo list items

--- a/src/app/shared/todo-list-view/todo-list-view.component.scss
+++ b/src/app/shared/todo-list-view/todo-list-view.component.scss
@@ -9,6 +9,17 @@
     min-width: 220px;
 }
 
+mat-list::ng-deep .mat-list-item-content {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+}
+
+mat-checkbox::ng-deep .mat-checkbox-label {
+    white-space: normal !important;
+  }
+
 #completed-items-accordion {
 
     mat-expansion-panel {
